# script

./: .gitignore  1.csv  LICENSE  README.md  data_processing.py  dataprocessing.py  main.py  pyproject.toml  test.py
