[project]
name = "csv-manipulation-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "prettytable>=3.16.0",
    "seaborn>=0.13.2",
    "xlsxwriter>=3.2.5",
]
